# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
print_commits/: main.py
