# setup.cfg
[metadata]
name = print-commits
description = print commits
version = 0.1.0
author = padosum
author_email = makalu171@gmail.com
license = MIT
url = https://padosum.dev

[options]
packages = find:
python_requires = >= 3.8.5
install_requires =
    requests>=2.8.1

[options.entry_points]
console_scripts =
    print-commits = print_commits.main:main
